# scrapix

./: README.md  pyproject.toml
.github/workflows/: test.yml
scrapix/: __init__.py  google.py  scraper.py  urls.py
scrapix/cli/: main.py
scrapix/config/: settings.py
scrapix/gui/: app.py
tests/: conftest.py  test_scraper.py  test_urls.py
